--- a/index.html
+++ b/index.html
@@ -1,30 +1,8 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Tabea Bacher</title>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/talks">Talks</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Tabea Bacher!</h1>
-				<p>I'm best known as ... <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:t.bacher@posteo.de">email</a></li>
-        		<li><a href="https://github.com/TabeaBacher">github.com/TabeaBacher</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+---
+layout: default
+title: Tabea Bacher
+---
+<div class="blurb">
+	<h1>Hi there, I'm Tabea!</h1>
+	<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+</div><!-- /.blurb -->
