--- a/index.html
+++ b/index.html
@@ -5,4 +5,6 @@ title: Tabea Bacher
 <div class="blurb">
 	<h1>Hi there, I'm Tabea!</h1>
 	<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+	
+	<img src="IMG_0456.jpg">
 </div><!-- /.blurb -->
