--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@ title: Tabea Bacher
 ---
 <div class="blurb">
 	<h1>Hi there, I'm Tabea!</h1>
-	<p>..</a></p>
+	<p><a href="/about">Read more about my life...</a></p>
 	<img src="IMG_0456.jpg" style="width:500px;height:500px;">
 </div><!-- /.blurb -->
