--- a/talks/index.html
+++ b/talks/index.html
@@ -5,5 +5,5 @@ title: Tabea Bacher, Talks
 <div class="blurb">
 	<h1>Talks</h1>
 	<p>Collection of slides<a href="/about">Read more about my life...</a></p>
-  <p>Talk on MathRepo, date, loc, name <a href="MathRepo.pdf">Slides</a>.</p>
+  <p>Talk on MathRepo,2022/07, MPI MiS <a href="MathRepo_Tabea_MathematicalSoftwareSem_07.22.pdf">Slides</a>.</p>
 </div><!-- /.blurb -->
