--- a/talks/index.html
+++ b/talks/index.html
@@ -4,6 +4,6 @@ title: Tabea Bacher, Talks
 ---
 <div class="blurb">
 	<h1>Talks</h1>
-	<p>Collection of slides<a href="/about">Read more about my life...</a></p>
-  <p>Talk on MathRepo,2022/07, MPI MiS <a href="MathRepo_Tabea_MathematicalSoftwareSem_07.22.pdf">Slides target="_blank"</a>.</p>
+	<p>Collection of slides</p>
+  <p>2022/07 Talk on MathRepo at MPI MiS <a href="MathRepo_Tabea_MathematicalSoftwareSem_07.22.pdf">Slides target="_blank"</a>.</p>
 </div><!-- /.blurb -->
