--- a/talks/index.html
+++ b/talks/index.html
@@ -5,5 +5,5 @@ title: Tabea Bacher, Talks
 <div class="blurb">
 	<h1>Talks</h1>
 	<p>Collection of slides</p>
-  <p>2022/07 Talk on MathRepo at MPI MiS <a href="MathRepo_Tabea_MathematicalSoftwareSem_07.22.pdf">Slides target="_blank"</a>.</p>
+  <p>2022/07 Talk on MathRepo at MPI MiS <a target="_blank" href="MathRepo_Tabea_MathematicalSoftwareSem_07.22.pdf">Slides </a>.</p>
 </div><!-- /.blurb -->
