--- a/talks/index.html
+++ b/talks/index.html
@@ -5,5 +5,8 @@ title: Tabea Bacher, Talks
 <div class="blurb">
 	<h1>Talks</h1>
 	<p>Collection of slides</p>
+  <p>2022/07 Talk on MaRDI at HeFDI Data Talks, online <a target="_blank" href="MathRepo_Tabea_MathematicalSoftwareSem_07.22.pdf">Slides </a>.</p>
+  <p>2022/11 Talk on Math Repo, MOM workshop at TU Berlin <a target="_blank" href="MathRepoMOMNov22.pdf">Slides </a>.</p>
+  <p>2022/08 "Pizza and Data" event at Studierenden Konferenz at MPI MiS <a target="_blank" href="Pizza and Data_StudierendenKonferenz.pdf">Slides </a>.</p>
   <p>2022/07 Talk on MathRepo at MPI MiS <a target="_blank" href="MathRepo_Tabea_MathematicalSoftwareSem_07.22.pdf">Slides </a>.</p>
 </div><!-- /.blurb -->
