--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@ layout: default
 title: Tabea Bacher
 ---
 <div class="blurb">
-	<h1>Hi there, I'm Tabea!</h1>
-	<p><a href="/about">Read more about my life...</a></p>
-	<img src="IMG_0456.jpg" style="width:500px;height:500px;">
+	<p>My name is Tabea Bacher. I joined the <a href="https://www.mis.mpg.de/">MPI MiS</a> in November 2021 to work for the Mathematical Research Data Initiative (MaRDI),
+	where I support the initiative's outreach, community integration and workshop organization.
+	I am a mathematician by training, got my diploma in Mathematics at the University of Leipzig and like to communicate and organize events, so I am happy to combine all of that in my position as 
+	MaRDI's Dissemination Coordinator. Since Summer 2022 I am one of the maintainers of <a href="https://mathrepo.mis.mpg.de/">MathRepo </a>, the repository for mathematical research-data by MPI MiS</p>
+	<a href="https://t1p.de/gkvya" >Here you can read more about my activities for MaRDI</a>
+	<img src="220427_Tabea-BRICK.png" style="width:500px;" align="right">
 </div><!-- /.blurb -->
